# bellmancapital

./: .gitignore  README.md  agent copy.py  agent.py  gemini.md  pyproject.toml  submission_report.txt
docs/: eda_takeaways_analysis.md  own_eda_insights.md
notebooks/: dirty_training.ipynb  eda pruebas1.ipynb  eda.ipynb  own_eda copy 2.ipynb  own_eda copy.ipynb
notebooks/experiments/Exp_1_Drop_410h/: events.out.tfevents.1780891904.DdFa-Victus.2980.27  events.out.tfevents.1780896372.DdFa-Victus.2980.28  events.out.tfevents.1780897233.DdFa-Victus.2980.29  events.out.tfevents.1780898101.DdFa-Victus.2980.30  events.out.tfevents.1780898976.DdFa-Victus.2980.31
notebooks/experiments/Exp_2_Drop_410h_171h/: events.out.tfevents.1780900708.DdFa-Victus.2980.33  events.out.tfevents.1780905072.DdFa-Victus.2980.34  events.out.tfevents.1780905940.DdFa-Victus.2980.35  events.out.tfevents.1780906805.DdFa-Victus.2980.36  events.out.tfevents.1780907693.DdFa-Victus.2980.37
notebooks/experiments/Exp_3_Micro_Only/: events.out.tfevents.1780909420.DdFa-Victus.2980.39  events.out.tfevents.1780913737.DdFa-Victus.2980.40  events.out.tfevents.1780914605.DdFa-Victus.2980.41  events.out.tfevents.1780915470.DdFa-Victus.2980.42  events.out.tfevents.1780916330.DdFa-Victus.2980.43
notebooks/experiments/Exp_4_All/: events.out.tfevents.1780923398.DdFa-Victus.2980.45  events.out.tfevents.1780928958.DdFa-Victus.2980.46  events.out.tfevents.1780930089.DdFa-Victus.2980.47  events.out.tfevents.1780931075.DdFa-Victus.2980.48  events.out.tfevents.1780931981.DdFa-Victus.2980.49
(+1 files in other folders)
